Removed unneeded Process object.